Update ErrorPageIT.java